@@ -19,12 +19,13 @@ class RemoteObject
       RemoteObject them = (RemoteObject) o;
       if (!them.busname.equals(this.busname)) return false;
       if (!them.objectpath.equals(this.objectpath)) return false;
-      if (!them.iface.equals(this.iface)) return false;
+      if (null != this.iface && !them.iface.equals(this.iface)) return false;
       return true;
    }
    public int hashCode()
    {
-      return busname.hashCode() + objectpath.hashCode() + iface.hashCode();
+      return busname.hashCode() + objectpath.hashCode() +
+         (null == iface ? 0 : iface.hashCode());
    }
    public boolean autoStarting() { return autostart; }
    public String getBusName() { return busname; }
